nohup.out
data: password=123456&name=13620988145
20150731114856935279
success login
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
20150731114856935279
20150731114856935279
success login
09:00-10:00
success login
09:00-10:00
false
10:00-11:00
exception in line 121
10:00-11:00
exception in line 121
11:00-12:00
false
11:00-12:00
false
14:00-15:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
exception in line 121
15:00-16:00
false
16:00-17:00
exception in line 121
10:00-11:00
false
11:00-12:00
exception in line 121
09:00-10:00
false
10:00-11:00
exception in line 121
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
exception in line 121
11:00-12:00
false
14:00-15:00
exception in line 121
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
exception in line 121
15:00-16:00
exception in line 121
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
exception in line 121
16:00-17:00
false
09:00-10:00
false
10:00-11:00
Traceback (most recent call last):
  File "reservation.py", line 178, in <module>
    multiMain()
  File "reservation.py", line 169, in multiMain
    alive = alive or threadArr[i].isAlive
KeyboardInterrupt
20150731114856935279
success login
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
exception in line 121
14:00-15:00
exception in line 121
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
exception in line 121
11:00-12:00
false
14:00-15:00
exception in line 121
15:00-16:00
false
16:00-17:00
false
09:00-10:00
false
10:00-11:00
false
11:00-12:00
false
14:00-15:00
false
15:00-16:00
Traceback (most recent call last):
  File "reservation.py", line 178, in <module>
    singleMain()
  File "reservation.py", line 151, in singleMain
    model.run(day="2015-08-21")
  File "reservation.py", line 116, in run
    self.reserve(timeKey=(i + 1), day=day)
  File "reservation.py", line 100, in reserve
    content = urllib2.urlopen(url, data).read()
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 154, in urlopen
    return opener.open(url, data, timeout)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 431, in open
    response = self._open(req, data)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 449, in _open
    '_open', req)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 409, in _call_chain
    result = func(*args)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 1227, in http_open
    return self.do_open(httplib.HTTPConnection, req)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/urllib2.py", line 1200, in do_open
    r = h.getresponse(buffering=True)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/httplib.py", line 1073, in getresponse
    response.begin()
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/httplib.py", line 415, in begin
    version, status, reason = self._read_status()
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/httplib.py", line 371, in _read_status
    line = self.fp.readline(_MAXLINE + 1)
  File "/usr/local/opt/pyenv/versions/anaconda-2.0.1/lib/python2.7/socket.py", line 476, in readline
    data = self._sock.recv(self._rbufsize)
KeyboardInterrupt
  File "reservation.py", line 209
    
    ^
IndentationError: expected an indented block
